# application/router/memo.go
@@ -24,7 +24,7 @@ func (mr *memoRouter) Init(root *fiber.Router) {
 		memoRouter.Get("/:memoID", mr.controller.GetMemo)
 		memoRouter.Post("/", mr.controller.AddMemo)
 		memoRouter.Patch("/:memoID", mr.controller.UpdateMemo)
-		memoRouter.Delete("/:youtubeVideoID", mr.controller.DeleteMemo)
+		memoRouter.Delete("/:memoIdOrYoutubeID", mr.controller.DeleteMemo)
 	}
 
 }
