# docs/swagger.json
@@ -296,14 +296,14 @@
                 }
             }
         },
-        "/memos/{youtubeVideoID}": {
+        "/memos/{memoIdOrYoutubeID}": {
             "delete": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "유니크 키인 (Device Token, YoutubeVideoID) 조합으로 메모 삭제",
+                "description": "1. (Device Token, memo ID) 조합으로 메모 삭제\n2. (Device Token, YoutubeVideoID) 조합으로 메모 삭제",
                 "consumes": [
                     "application/json"
                 ],
@@ -313,12 +313,12 @@
                 "tags": [
                     "memos"
                 ],
-                "summary": "Delete Memo by a youtube video ID",
+                "summary": "Delete Memo by a unique id (memo ID or youtube video ID)",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "youtubeVideoID to retrieve",
-                        "name": "youtubeVideoID",
+                        "description": "memoIdOrYoutubeID to get a memo",
+                        "name": "memoIdOrYoutubeID",
                         "in": "path",
                         "required": true
                     }
@@ -599,6 +599,9 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                },
+                "youtubeVideoID": {
                     "type": "string"
                 }
             }
